
[+] New/improved feature
[B] Bug fixed
[K] Known issue
[O] Other
[A] API semantics

Change log
==========

v0.12.0
[+] crofsock: revised tx-queueing strategy (default txqueue size limited 
    to 128 messages), API changes to crofctl and crofdpt: all transmission
    methods return the queueing result when sending an openflow message:
    MSG_QUEUED, MSG_QUEUED_CONGESTION, MSG_QUEUEING_FAILED_*

v0.11.2
[B] cofmsg: fix copy of cofmsg_features_reply
[+] crofconn: handle_rx_messages optimization

v0.11.1
[+] coxmatch: added outputter for ppp(oe) experimental oxmatches
[+] crofconn: hello timeout values decreased
[B] crofconn: call handle_closed in case echo_request_expired
[+] use of __FUNCTION__ instead of __PRETTY_FUNCTION__ is sufficient
[O] Documentation updated wrt. dependencies
[B] crofbase: prevent shadowing of cthread callbacks

v0.11.0
[B] made ofp_version atomic
[B] multiple thread related issues found with tsan
[B] crofsock: txqueue order of barrier requests
[+] crofbase: allow set_ctl without creation of a new instance
[B] ctimespec: invalid calculation and data race fixed
[+] travis: print log of failed tests
[+] log exceptions caught in thread
[+] cdptid and cdpid are now basic types
[+] cthread: timer cleanup
[B] tests are now included in dist release
[+] rofl journal replaced with glog
[+] reset txbuffer before sending to comply with ovs and ofagent
[+] clang format added
[+] cthread: cleanup locking and api
[B] heap-use-after-free in crofconn
[B] crofbase: return if accept fails with EAGAIN
[+] cthread: set name of thread
[B] crofbase: heap-use-after-free fixed
[B] crofsock: heap-use-after-free fixed
[B] cthread: use pthread_join so finalize a thread
[B] debug log of OF version number fixed

v0.10.9

[+] fixed issues with compilation under GCC6
[+] Extended behaviour of method rofl::crofbase::set_dpt()

v0.10.8

[B] crofdpt: do not automatically assign xid to experimenter
    messages

v0.10.7

[B] crofsock: fixed bug in congestion management